@@ -352,18 +352,23 @@ static void GetRNGkind(SEXP seeds)
     if (!isInteger(seeds)) {
 	if (seeds == R_MissingArg) /* How can this happen? */
 	    error(_("'.Random.seed' is a missing argument with no default"));
-	error(_("'.Random.seed' is not an integer vector but of type '%s'"),
+	warning(_("'.Random.seed' is not an integer vector but of type '%s', so ignored"),
 		type2char(TYPEOF(seeds)));
+	goto invalid;
     }
     is = INTEGER(seeds);
     tmp = is[0];
     /* avoid overflow here: max current value is 705 */
-    if (tmp == NA_INTEGER || tmp < 0 || tmp > 1000)
-	error(_("'.Random.seed[1]' is not a valid integer"));
+    if (tmp == NA_INTEGER || tmp < 0 || tmp > 1000) {
+	error(_("'.Random.seed[1]' is not a valid integer, so ignored"));
+	goto invalid;
+    }
     newRNG = (RNGtype) (tmp % 100);
     newN01 = (N01type) (tmp / 100);
-    if (newN01 > KINDERMAN_RAMAGE)
-	error(_("'.Random.seed[1]' is not a valid Normal type"));
+    if (newN01 > KINDERMAN_RAMAGE) {
+	error(_("'.Random.seed[1]' is not a valid Normal type, so ignored"));
+	goto invalid;
+    }
     switch(newRNG) {
     case WICHMANN_HILL:
     case MARSAGLIA_MULTICARRY:
@@ -374,13 +379,20 @@ static void GetRNGkind(SEXP seeds)
     case LECUYER_CMRG:
 	break;
     case USER_UNIF:
-	if(!User_unif_fun)
-	    error(_("'.Random.seed[1] = 5' but no user-supplied generator"));
+	if(!User_unif_fun) {
+	    warning(_("'.Random.seed[1] = 5' but no user-supplied generator, so ignored"));
+	    goto invalid;
+	}
 	break;
     default:
-	error(_("'.Random.seed[1]' is not a valid RNG kind"));
+	warning(_("'.Random.seed[1]' is not a valid RNG kind so ignored"));
+	goto invalid;
     }
     RNG_kind = newRNG; N01_kind = newN01;
+    return;
+invalid:
+    RNG_kind = RNG_DEFAULT; N01_kind = N01_DEFAULT;
+    Randomize(RNG_kind);
     return;
 }
 
